# aigues-de-bacelona-cli

./: Cargo.toml
src/: api.rs  domain.rs  main.rs
